# banking-data-validator

./: .dockerignore  .gitignore  Dockerfile  README.md  changelog.md  main.py  pyproject.toml  sample_data.csv
.github/workflows/: ci.yml
app/: main.py  validators.py
tests/: __init__.py  conftest.py  test_main.py  test_validate.py
